k8/chats_query.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pryvt-chats-query-deployment
  labels:
    app: pryvt-chats-query
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pryvt-chats-query
  template:
    metadata:
      labels:
        app: pryvt-chats-query
    spec:
      volumes:
        - name: pryvt-chats-query-storage
          persistentVolumeClaim:
            claimName: task-pv-claim          
      containers:
        - name: pryvt-chats-query-container
          image: lab0mb4/pryvt_chats_query:development
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128M"
              cpu: "0.5"
          ports:
            - containerPort: 5520
          volumeMounts:
          - mountPath: "/app/db_files"
            name: pryvt-chats-query-storage
          
---
apiVersion: v1
kind: Service
metadata:
  name: pryvt-chats-query-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5520
  selector:
    app: pryvt-chats-query
