k8/evtsrc.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: evtsrc-server-deployment
  labels:
    app: evtsrc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evtsrc-server
  template:
    metadata:
      labels:
        app: evtsrc-server
    spec:
      volumes:
        - name: evt-src-db-storage
          persistentVolumeClaim:
            claimName: task-pv-claim          
      containers:
        - name: evtsrc-server
          image: lab0mb4/evtsrc:development
          imagePullPolicy: Always
          resources:
            limits:
              memory: "64M"
              cpu: "0.5"
          ports:
            - containerPort: 5515
            - containerPort: 5521
          volumeMounts:
          - mountPath: "/app/db_files"
            name: evt-src-db-storage
---
apiVersion: v1
kind: Service
metadata:
  name: evtsrc-server
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 5515
  - name: tcp
    port: 5521
    targetPort: 5521
  selector:
    app: evtsrc-server
