k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pryvt-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost
    secretName: example-secret-name
  rules:
  - http:
      paths:
      - path: /api/v1/evtsrc/(.*)
        pathType: Prefix
        backend:
          service:
            name: evtsrc-server
            port:
              number: 80
      - path: /api/v1/identification/query/(.*)
        pathType: Prefix
        backend:
          service:
            name: pryvt-identification-query-svc
            port:
              number: 80
      - path: /api/v1/identification/command/(.*)
        pathType: Prefix
        backend:
          service:
            name: pryvt-identification-command-svc
            port:
              number: 80
      - path: /api/v1/posting/query/(.*)
        pathType: Prefix
        backend:
          service:
            name: pryvt-posting-query-svc
            port:
              number: 80
      - path: /api/v1/posting/command/(.*)
        pathType: Prefix
        backend:
          service:
            name: pryvt-posting-command-svc
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: pryvt-ui-svc
            port:
              number: 80
